discord-frontend/hartex-discord-commands-test/tests/ui/only_structs.stderr
error: trait can only be derived on structs
  --> tests/ui/only_structs.rs:28:5
   |
28 | pub enum OnlyStructsEnum {}
   |     ^^^^

error: trait can only be derived on structs
  --> tests/ui/only_structs.rs:31:5
   |
31 | pub union OnlyStructsUnion<T> {
   |     ^^^^^
